<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.young.iremoter.MainActivity" >

    <item android:id="@+id/settings_start_conf"
        android:title="@string/settings_start_conf"
        android:orderInCategory="10"
        app:showAsAction="never" />

    <item android:id="@+id/settings_end_conf"
        android:title="@string/settings_end_conf"
        android:orderInCategory="20"
        app:showAsAction="never" />

    <item android:id="@+id/settings_clean_conf"
        android:title="@string/settings_clean_conf"
        android:orderInCategory="30"
        app:showAsAction="never" />

    <item android:id="@+id/settings_start_rename"
        android:title="@string/settings_start_rename"
        android:orderInCategory="40"
        app:showAsAction="never" />

    <item android:id="@+id/settings_end_rename"
        android:title="@string/settings_end_rename"
        android:orderInCategory="40"
        app:showAsAction="never" />

    <item android:id="@+id/settings_clean_rename"
        android:title="@string/settings_clean_rename"
        android:orderInCategory="40"
        app:showAsAction="never" />

</menu>
