<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.young.iremoter.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/button1"
            android:text="@string/button1"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/button2"
            android:text="@string/button2"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/button3"
            android:text="@string/button3"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/button4"
            android:text="@string/button4"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/button5"
            android:text="@string/button5"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/button6"
            android:text="@string/button6"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp" />

    </LinearLayout>
</LinearLayout>
